[gd_scene load_steps=30 format=3 uid="uid://dpyn1enbx4w7u"]

[ext_resource type="Texture2D" uid="uid://wgpfvhfu1oi6" path="res://images/game-map/time/timer.svg" id="1_lc3b6"]
[ext_resource type="VideoStream" path="res://images/background/purple-nebula-background.ogv" id="1_tp77f"]
[ext_resource type="Texture2D" uid="uid://b46cjpn0dkvib" path="res://images/game-map/time/speed.svg" id="3_ps3v0"]
[ext_resource type="Script" path="res://ui/main_screen/timer_btns.gd" id="3_svwg2"]
[ext_resource type="Script" path="res://ui/main_screen/timer.gd" id="5_bt7jo"]
[ext_resource type="Texture2D" uid="uid://beevq6x3iexl0" path="res://images/main-game/hex-cell-small.svg" id="7_cf20c"]
[ext_resource type="Texture2D" uid="uid://cggemgu6mwcp" path="res://images/game-map/notification-hex/hex-cell-database-notifiaction.svg" id="8_5sr2y"]
[ext_resource type="Texture2D" uid="uid://c8d3le8nttgse" path="res://images/game-map/simple-hex/hex-cell-database.svg" id="8_8qqeu"]
[ext_resource type="Texture2D" uid="uid://d4im2hnqve1s3" path="res://images/game-map/selected-hex/hex-cell-database-selected.svg" id="9_54p3a"]
[ext_resource type="Texture2D" uid="uid://cyt3nwyrvf3bs" path="res://images/game-map/simple-hex/hex-cell-delivery.svg" id="10_htyl8"]
[ext_resource type="Texture2D" uid="uid://t6jnmwlhwtj5" path="res://images/game-map/notification-hex/hex-cell-delivery-notifiaction.svg" id="11_5o6cg"]
[ext_resource type="Texture2D" uid="uid://djxp3n13q5pn" path="res://images/game-map/selected-hex/hex-cell-delivery-selected.svg" id="11_medfd"]
[ext_resource type="Texture2D" uid="uid://bmdtbh61rtdwa" path="res://images/game-map/simple-hex/hex-cell-business.svg" id="12_l01y6"]
[ext_resource type="Texture2D" uid="uid://cqul3fdpbrlv2" path="res://images/game-map/selected-hex/hex-cel-buisness-logic-selected.svg" id="13_vejf5"]
[ext_resource type="Texture2D" uid="uid://dlpx4hjfysmbd" path="res://images/game-map/simple-hex/hex-cell-backend.svg" id="14_0eftj"]
[ext_resource type="Texture2D" uid="uid://dsyxmv2i03ur7" path="res://images/game-map/notification-hex/hex-cell-business-notification.svg" id="14_ov5tk"]
[ext_resource type="Texture2D" uid="uid://bascpiay0qrgh" path="res://images/game-map/selected-hex/hex-cell-backend-selected.svg" id="15_8ck7c"]
[ext_resource type="Texture2D" uid="uid://bmlybrtxl8cum" path="res://images/game-map/simple-hex/hex-cell-ui-ux.svg" id="16_ir080"]
[ext_resource type="Texture2D" uid="uid://da7lgcc231bpm" path="res://images/game-map/notification-hex/hex-cell-backend-notifiaction.svg" id="17_3vmwg"]
[ext_resource type="Texture2D" uid="uid://dk8drfc0yhdjy" path="res://images/game-map/selected-hex/hex-cell-ui-ux-selected.svg" id="17_udybg"]
[ext_resource type="Script" path="res://ui/main_screen/init_countdown.gd" id="18_0wahk"]
[ext_resource type="Script" path="res://ui/main_screen/action_event_btn_manager.gd" id="18_nwfow"]
[ext_resource type="Texture2D" uid="uid://dp3uujxgl4xqh" path="res://images/game-map/notification-hex/hex-cell-ux-notification.svg" id="20_ajqmu"]
[ext_resource type="PackedScene" uid="uid://newdc3qfq08j" path="res://ui/main_screen/terminal/terminal_mock.tscn" id="26_lb6pa"]
[ext_resource type="Script" path="res://ui/main_screen/anonymity_value.gd" id="27_4w0dy"]
[ext_resource type="Script" path="res://ui/main_screen/DEBUG_BUTTON_PROGRESS.gd" id="28_dq55m"]
[ext_resource type="Texture2D" uid="uid://csqw4cv82qkjj" path="res://images/sabotage-buttons/sabotage-button-no-charge.svg" id="30_lwshy"]
[ext_resource type="PackedScene" uid="uid://cqjh266ttak2g" path="res://ui/main_screen/progress_bar/progress_bar.tscn" id="31_vyioj"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_wlhim"]
load_path = "res://.godot/imported/pause.svg-09127f19c3b279e09b32f71d3249e6c1.ctex"

[node name="MainGameScene" type="Node2D"]

[node name="Background" type="VideoStreamPlayer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
stream = ExtResource("1_tp77f")
autoplay = true
expand = true
loop = true

[node name="TimerSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_lc3b6")
centered = false

[node name="TimerContainer" type="HBoxContainer" parent="TimerSprite"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.5
offset_top = -27.0
offset_right = 89.5
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimerLabel" type="Label" parent="TimerSprite/TimerContainer"]
layout_mode = 2
text = "00:00
"
script = ExtResource("5_bt7jo")

[node name="TimerNode" type="Timer" parent="TimerSprite/TimerContainer/TimerLabel"]
autostart = true

[node name="PlayPauseBtn" type="TextureButton" parent="TimerSprite/TimerContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
texture_normal = SubResource("CompressedTexture2D_wlhim")
script = ExtResource("3_svwg2")

[node name="SpeedUpBtn" type="TextureButton" parent="TimerSprite/TimerContainer"]
layout_mode = 2
texture_normal = ExtResource("3_ps3v0")
script = ExtResource("3_svwg2")

[node name="MainControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 110.0
offset_right = 830.0
offset_bottom = 774.0

[node name="EmptyHex2" type="TextureButton" parent="MainControl"]
layout_mode = 0
offset_left = 572.0
offset_top = 157.0
offset_right = 706.0
offset_bottom = 285.0
texture_normal = ExtResource("7_cf20c")

[node name="EmptyHex" type="TextureButton" parent="MainControl"]
layout_mode = 0
offset_left = 380.0
offset_top = 377.0
offset_right = 514.0
offset_bottom = 505.0
texture_normal = ExtResource("7_cf20c")

[node name="EmptyHex3" type="TextureButton" parent="MainControl"]
layout_mode = 0
offset_left = 476.0
offset_top = 432.0
offset_right = 610.0
offset_bottom = 560.0
texture_normal = ExtResource("7_cf20c")

[node name="EmptyHex4" type="TextureButton" parent="MainControl"]
layout_mode = 0
offset_left = 476.0
offset_top = 212.0
offset_right = 610.0
offset_bottom = 340.0
texture_normal = ExtResource("7_cf20c")

[node name="EmptyHex5" type="TextureButton" parent="MainControl"]
layout_mode = 0
offset_left = 572.0
offset_top = 267.0
offset_right = 706.0
offset_bottom = 395.0
texture_normal = ExtResource("7_cf20c")

[node name="EmptyHex6" type="TextureButton" parent="MainControl"]
layout_mode = 0
offset_left = 380.0
offset_top = 267.0
offset_right = 514.0
offset_bottom = 395.0
texture_normal = ExtResource("7_cf20c")

[node name="EmptyHex7" type="TextureButton" parent="MainControl"]
layout_mode = 0
offset_left = 476.0
offset_top = 102.0
offset_right = 610.0
offset_bottom = 230.0
texture_normal = ExtResource("7_cf20c")

[node name="Database" type="TextureButton" parent="MainControl"]
layout_mode = 0
offset_left = 555.0
offset_top = 483.0
offset_right = 761.0
offset_bottom = 683.0
disabled = true
texture_normal = ExtResource("8_5sr2y")
texture_pressed = ExtResource("9_54p3a")
texture_hover = ExtResource("9_54p3a")
texture_disabled = ExtResource("8_8qqeu")
script = ExtResource("18_nwfow")

[node name="Label" type="Label" parent="MainControl/Database"]
layout_mode = 0
offset_left = 90.0
offset_top = 198.0
offset_right = 130.0
offset_bottom = 221.0

[node name="Timer" type="Timer" parent="MainControl/Database/Label"]
script = ExtResource("18_0wahk")

[node name="Delivery" type="TextureButton" parent="MainControl"]
layout_mode = 0
offset_left = 476.0
offset_top = 322.0
offset_right = 616.0
offset_bottom = 455.0
disabled = true
texture_normal = ExtResource("11_5o6cg")
texture_pressed = ExtResource("11_medfd")
texture_hover = ExtResource("11_medfd")
texture_disabled = ExtResource("10_htyl8")
script = ExtResource("18_nwfow")

[node name="Label" type="Label" parent="MainControl/Delivery"]
layout_mode = 0
offset_left = 126.0
offset_top = 88.0
offset_right = 166.0
offset_bottom = 111.0

[node name="Timer" type="Timer" parent="MainControl/Delivery/Label"]
script = ExtResource("18_0wahk")

[node name="Business_Logic" type="TextureButton" parent="MainControl"]
layout_mode = 0
offset_left = 156.0
offset_top = 258.0
offset_right = 422.0
offset_bottom = 518.0
disabled = true
texture_normal = ExtResource("14_ov5tk")
texture_pressed = ExtResource("13_vejf5")
texture_hover = ExtResource("13_vejf5")
texture_disabled = ExtResource("12_l01y6")
script = ExtResource("18_nwfow")

[node name="Label" type="Label" parent="MainControl/Business_Logic"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Timer" type="Timer" parent="MainControl/Business_Logic/Label"]
script = ExtResource("18_0wahk")

[node name="Backend" type="TextureButton" parent="MainControl"]
layout_mode = 0
offset_left = 668.0
offset_top = 148.0
offset_right = 934.0
offset_bottom = 408.0
disabled = true
texture_normal = ExtResource("17_3vmwg")
texture_pressed = ExtResource("15_8ck7c")
texture_hover = ExtResource("15_8ck7c")
texture_disabled = ExtResource("14_0eftj")
script = ExtResource("18_nwfow")

[node name="Label" type="Label" parent="MainControl/Backend"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Timer" type="Timer" parent="MainControl/Backend/Label"]
script = ExtResource("18_0wahk")

[node name="UI_UX" type="TextureButton" parent="MainControl"]
layout_mode = 0
offset_left = 380.0
offset_top = 157.0
offset_right = 519.0
offset_bottom = 290.0
disabled = true
texture_normal = ExtResource("20_ajqmu")
texture_pressed = ExtResource("17_udybg")
texture_hover = ExtResource("17_udybg")
texture_disabled = ExtResource("16_ir080")
script = ExtResource("18_nwfow")

[node name="Label" type="Label" parent="MainControl/UI_UX"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Timer" type="Timer" parent="MainControl/UI_UX/Label"]
script = ExtResource("18_0wahk")

[node name="Terminal" type="Node2D" parent="."]

[node name="_terminal_mock" parent="Terminal" instance=ExtResource("26_lb6pa")]
position = Vector2(1159, -4)
scale = Vector2(1.405, 1.45)

[node name="AnonymityBarControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("27_4w0dy")

[node name="AnonymityValue" type="RichTextLabel" parent="AnonymityBarControl"]
layout_mode = 0
offset_left = 1015.0
offset_top = 262.0
offset_right = 1170.0
offset_bottom = 904.0
text = "ANONIMITY MOCK"

[node name="SabotageButtonControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SabotageButton" type="TextureButton" parent="SabotageButtonControl"]
layout_mode = 0
offset_left = 19.0
offset_top = 734.0
offset_right = 221.0
offset_bottom = 930.0
texture_normal = ExtResource("30_lwshy")

[node name="ProgressBar" parent="." instance=ExtResource("31_vyioj")]
offset_left = 213.0
offset_top = 848.0
offset_right = 213.0
offset_bottom = 848.0

[node name="DebugButtonPlus" type="Button" parent="."]
offset_left = 400.0
offset_top = 791.0
offset_right = 576.0
offset_bottom = 839.0
text = "ADD +1 PROGRESS"
script = ExtResource("28_dq55m")

[node name="DebugButtonMinus" type="Button" parent="."]
offset_left = 592.0
offset_top = 793.0
offset_right = 768.0
offset_bottom = 841.0
text = "ADD -1 PROGRESS"
script = ExtResource("28_dq55m")

[connection signal="timeout" from="TimerSprite/TimerContainer/TimerLabel/TimerNode" to="TimerSprite/TimerContainer/TimerLabel" method="_on_timer_node_timeout"]
[connection signal="pause_game" from="TimerSprite/TimerContainer/PlayPauseBtn" to="TimerSprite/TimerContainer/TimerLabel" method="catch_pause"]
[connection signal="unpause_game" from="TimerSprite/TimerContainer/PlayPauseBtn" to="TimerSprite/TimerContainer/TimerLabel" method="catch_unpause"]
[connection signal="speed_up_game" from="TimerSprite/TimerContainer/SpeedUpBtn" to="TimerSprite/TimerContainer/TimerLabel" method="catch_speed_change"]
[connection signal="timeout" from="MainControl/Database/Label/Timer" to="MainControl/Database" method="_on_timer_timeout"]
[connection signal="timeout" from="MainControl/Delivery/Label/Timer" to="MainControl/Delivery" method="_on_timer_timeout"]
[connection signal="timeout" from="MainControl/Business_Logic/Label/Timer" to="MainControl/Business_Logic" method="_on_timer_timeout"]
[connection signal="timeout" from="MainControl/Backend/Label/Timer" to="MainControl/Backend" method="_on_timer_timeout"]
[connection signal="timeout" from="MainControl/UI_UX/Label/Timer" to="MainControl/UI_UX" method="_on_timer_timeout"]
[connection signal="pressed" from="DebugButtonPlus" to="DebugButtonPlus" method="_on_Button_pressed_plus"]
[connection signal="pressed" from="DebugButtonMinus" to="DebugButtonMinus" method="_on_Button_pressed_minus"]
